--- a/yumecan.html
+++ b/yumecan.html
@@ -7804,7 +7804,7 @@ function exitVisitMode() {
 		
 
 // 1. 랭킹 모달 열기 함수
-Modal() {
+async function openRankingModal() {
     let modal = document.getElementById('ranking-modal');
     
     // 모달이 없으면 새로 생성
