--- a/yumecan.html
+++ b/yumecan.html
@@ -1356,7 +1356,7 @@ body.pointer-events-none {
         <div class="flex gap-2 mt-4">
             <button onclick="saveMyRoomCharacters()" class="flex-1 gacha-button bg-pink-600 hover:bg-pink-700 text-white font-bold py-3 rounded-lg shadow-lg">저장하기</button>
             <button onclick="document.getElementById('myroom-char-selector-modal').classList.add('hidden')" class="w-1/4 gacha-button bg-gray-600 hover:bg-gray-700 text-white font-bold py-3 rounded-lg">취소</button>
-        </div> </div> 
+        </div> </div> </div>
 		<div id="combat-result-modal" class="hidden fixed inset-0 bg-black/70 flex justify-center items-center z-[9999]">
                     <div class="bg-gray-800 p-8 rounded-lg text-center">
                         <h2 id="combat-result-title" class="text-4xl font-bold mb-4"></h2>
