--- a/yumecan.html
+++ b/yumecan.html
@@ -513,6 +513,7 @@ body.pointer-events-none {
 
     </div>
 </div>
+</div>
             
 			<div id="event-home-view" class="hidden">
     <div class="flex flex-col md:flex-row gap-6">
