--- a/yumecan.html
+++ b/yumecan.html
@@ -511,8 +511,8 @@ body.pointer-events-none {
             <div class="text-[9px] md:text-[10px] text-center text-gray-300 leading-none mt-0.5">프로필</div>
         </button>
 
-    </div>
-</div>
+    </div> </div> </div>
+
             
 			<div id="event-home-view" class="hidden">
     <div class="flex flex-col md:flex-row gap-6">
