--- a/yumecan.html
+++ b/yumecan.html
@@ -511,8 +511,9 @@ body.pointer-events-none {
             <div class="text-[9px] md:text-[10px] text-center text-gray-300 leading-none mt-0.5">프로필</div>
         </button>
 
-    </div> </div> </div>
-
+    </div>
+</div>
+</div>
             
 			<div id="event-home-view" class="hidden">
     <div class="flex flex-col md:flex-row gap-6">
@@ -670,45 +671,39 @@ body.pointer-events-none {
 </div>
 
             <div id="gacha-view" class="hidden">
-    <p class="text-center text-gray-200 mt-2 mb-4">운명을 시험하여 당신의 등장인물을 만나보세요.</p>
-    
-    <div class="bg-black/20 rounded-full p-1 flex justify-center items-center mb-4 max-w-sm mx-auto">
-        <button id="gacha-tab-normal" class="sub-tab-button active w-1/2 font-bold py-2 px-6 rounded-full">일반 서가</button>
-        <button id="gacha-tab-event" class="sub-tab-button w-1/2 font-bold py-2 px-6 rounded-full">이벤트 서가</button>
+                <p class="text-center text-gray-200 mt-2 mb-4">운명을 시험하여 당신의 등장인물을 만나보세요.</p>
+                <div class="bg-black/20 rounded-full p-1 flex justify-center items-center mb-4 max-w-sm mx-auto">
+                    <button id="gacha-tab-normal" class="sub-tab-button active w-1/2 font-bold py-2 px-6 rounded-full">일반 서가</button>
+                    <button id="gacha-tab-event" class="sub-tab-button w-1/2 font-bold py-2 px-6 rounded-full hidden">이벤트 서가</button>
+                </div>
+                <div id="normal-gacha-view">
+                    <div class="flex flex-col sm:flex-row justify-center items-center gap-4 mb-4">
+                        <button id="pull-one" class="gacha-button w-full sm:w-auto bg-blue-500 hover:bg-blue-600 disabled:opacity-50 disabled:cursor-not-allowed text-white font-bold py-3 px-8 rounded-full shadow-lg">💎 1회 뽑기 (10)</button>
+                        <button id="pull-ten" class="gacha-button w-full sm:w-auto bg-purple-600 hover:bg-purple-700 disabled:opacity-50 disabled:cursor-not-allowed text-white font-bold py-3 px-8 rounded-full shadow-lg">💎💎 10회 뽑기 (100)</button>
+						<button onclick="openGachaPoolModal('normal')" class="gacha-button w-full sm:w-auto bg-gray-600 hover:bg-gray-700 text-white font-bold py-2 px-6 rounded-full shadow-lg text-sm mt-2">
+    등장인물 목록 (획득 가능)
+</button>
+                    </div>
+                </div>
+                <div id="event-gacha-view" class="hidden">
+				<div class="w-full flex justify-start mb-2 pl-1">
+        <button onclick="switchTab('event-home')" class="bg-gray-700 hover:bg-gray-600 text-white text-xs font-bold py-1 px-3 rounded-full flex items-center gap-1 shadow-md border border-gray-500 transition-transform hover:scale-105">
+            <span>◀</span> 이벤트 홈
+        </button>
     </div>
-
-    <div id="normal-gacha-view">
-        <div class="flex flex-col sm:flex-row justify-center items-center gap-4 mb-4">
-            <button id="pull-one" class="gacha-button w-full sm:w-auto bg-blue-500 hover:bg-blue-600 disabled:opacity-50 disabled:cursor-not-allowed text-white font-bold py-3 px-8 rounded-full shadow-lg">💎 1회 뽑기 (10)</button>
-            <button id="pull-ten" class="gacha-button w-full sm:w-auto bg-purple-600 hover:bg-purple-700 disabled:opacity-50 disabled:cursor-not-allowed text-white font-bold py-3 px-8 rounded-full shadow-lg">💎💎 10회 뽑기 (100)</button>
-            <button onclick="openGachaPoolModal('normal')" class="gacha-button w-full sm:w-auto bg-gray-600 hover:bg-gray-700 text-white font-bold py-2 px-6 rounded-full shadow-lg text-sm mt-2">
-                등장인물 목록 (획득 가능)
-            </button>
-        </div>
-    </div> 
-
-    <div id="event-gacha-view" class="hidden">
-        <div class="w-full flex justify-start mb-2 pl-1">
-            <button onclick="switchTab('event-home')" class="bg-gray-700 hover:bg-gray-600 text-white text-xs font-bold py-1 px-3 rounded-full flex items-center gap-1 shadow-md border border-gray-500 transition-transform hover:scale-105">
-                <span>◀</span> 이벤트 홈
-            </button>
-        </div>
-        <div id="event-gacha-info" class="text-center p-2 mb-2 rounded-lg bg-yellow-500/20">
-            <p class="font-bold text-yellow-300"></p>
-        </div>
-        <div class="flex flex-col sm:flex-row justify-center items-center gap-4 mb-4">
-            <button id="pull-one-event" class="gacha-button w-full sm:w-auto bg-gradient-to-r from-red-500 to-yellow-500 hover:from-red-600 hover:to-yellow-600 disabled:opacity-50 disabled:cursor-not-allowed text-white font-bold py-3 px-8 rounded-full shadow-lg">🔥 1회 뽑기 (10)</button>
-            <button id="pull-ten-event" class="gacha-button w-full sm:w-auto bg-gradient-to-r from-pink-500 to-purple-600 hover:from-pink-600 hover:to-purple-700 disabled:opacity-50 disabled:cursor-not-allowed text-white font-bold py-3 px-8 rounded-full shadow-lg">🔥🔥 10회 뽑기 (100)</button>
-            <button onclick="openGachaPoolModal('event')" class="gacha-button w-full sm:w-auto bg-gray-600 hover:bg-gray-700 text-white font-bold py-2 px-6 rounded-full shadow-lg text-sm mt-2">
-                등장인물 목록 (획득 가능)
-            </button>
-        </div>
-    </div>
-
-    <div id="results-container" class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 gap-4 min-h-[200px] bg-black/20 p-4 rounded-xl"></div>
-
-</div>
-
+                    <div id="event-gacha-info" class="text-center p-2 mb-2 rounded-lg bg-yellow-500/20">
+                        <p class="font-bold text-yellow-300"></p>
+                    </div>
+                    <div class="flex flex-col sm:flex-row justify-center items-center gap-4 mb-4">
+                        <button id="pull-one-event" class="gacha-button w-full sm:w-auto bg-gradient-to-r from-red-500 to-yellow-500 hover:from-red-600 hover:to-yellow-600 disabled:opacity-50 disabled:cursor-not-allowed text-white font-bold py-3 px-8 rounded-full shadow-lg">🔥 1회 뽑기 (10)</button>
+                        <button id="pull-ten-event" class="gacha-button w-full sm:w-auto bg-gradient-to-r from-pink-500 to-purple-600 hover:from-pink-600 hover:to-purple-700 disabled:opacity-50 disabled:cursor-not-allowed text-white font-bold py-3 px-8 rounded-full shadow-lg">🔥🔥 10회 뽑기 (100)</button>
+						<button onclick="openGachaPoolModal('event')" class="gacha-button w-full sm:w-auto bg-gray-600 hover:bg-gray-700 text-white font-bold py-2 px-6 rounded-full shadow-lg text-sm mt-2">
+    등장인물 목록 (획득 가능)
+</button>
+                    </div>
+                </div>
+                <div id="results-container" class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 gap-4 min-h-[200px] bg-black/20 p-4 rounded-xl"></div>
+            </div>
 
             <div id="inventory-view" class="hidden">
      <div class="text-center mb-4 relative">
@@ -1361,7 +1356,7 @@ body.pointer-events-none {
         <div class="flex gap-2 mt-4">
             <button onclick="saveMyRoomCharacters()" class="flex-1 gacha-button bg-pink-600 hover:bg-pink-700 text-white font-bold py-3 rounded-lg shadow-lg">저장하기</button>
             <button onclick="document.getElementById('myroom-char-selector-modal').classList.add('hidden')" class="w-1/4 gacha-button bg-gray-600 hover:bg-gray-700 text-white font-bold py-3 rounded-lg">취소</button>
-        </div> </div> </div>
+        </div> </div> 
 		<div id="combat-result-modal" class="hidden fixed inset-0 bg-black/70 flex justify-center items-center z-[9999]">
                     <div class="bg-gray-800 p-8 rounded-lg text-center">
                         <h2 id="combat-result-title" class="text-4xl font-bold mb-4"></h2>
@@ -1669,15 +1664,9 @@ const dismantleSelectedButton = document.getElementById('dismantle-selected-butt
             // 1. 전역 변수 선언 (자동으로 모든 탭과 뷰를 잡도록 설정)
             const allTabs = document.querySelectorAll('.tab-button');
             // 모달창을 제외한 메인 뷰들을 자동으로 모두 가져옵니다.
-            const viewIds = [
-    'home-view', 'event-home-view', 'event-view', 'gacha-view', 
-    'inventory-view', 'deck-view', 'combat-view', 'combat-in-progress-view',
-    'collection-view', 'achievements-view', 'story-view', 'trade-view', 
-    'profile-view', 'friends-view', 'myroom-view'
-];
-
-// 이 목록에 있는 요소들만 찾아옵니다.
-const allViews = viewIds.map(id => document.getElementById(id)).filter(el => el);
+            const allViews = document.querySelectorAll(
+              'main > div:not(#combat-result-modal):not(#card-detail-modal):not(#interactive-story-modal)'
+            );
             const pullOneButton = document.getElementById('pull-one');
             const pullTenButton = document.getElementById('pull-ten');
             const pullOneEventButton = document.getElementById('pull-one-event');
@@ -9564,7 +9553,6 @@ function updateRaidDailyCountUI() {
     </script>
 </body>
 </html>
-
 
 
 
