--- a/yumecan.html
+++ b/yumecan.html
@@ -4452,22 +4452,21 @@ async function startCombat(indices, type) {
     }
 
     // 2) 플레이어 덱 영역 (좌측)
-    // ✨ 핵심 변경 1: pb-8 (하단 패딩) 추가
-    // 스크롤 끝까지 내려도 카드 밑부분이 잘리지 않도록 아래쪽에 넉넉한 공간을 줍니다.
-    combatPlayerDeck.className = "w-full md:w-1/2 md:max-w-md flex flex-wrap justify-center content-center gap-1.5 md:gap-2 order-2 md:order-1 overflow-y-auto p-2 pb-8 scrollbar-hide"; 
+    // ✨ 핵심 변경 1: 'overflow-hidden' 적용
+    // 스크롤 기능을 아예 꺼버립니다. 이제 터치해도 덱 영역이 움직이지 않습니다.
+    // ✨ 핵심 변경 2: 'pb-8' 제거
+    // 스크롤이 없으므로 하단 여백이 굳이 필요 없습니다. 중앙 정렬을 위해 제거했습니다.
+    combatPlayerDeck.className = "w-full md:w-1/2 md:max-w-md flex flex-wrap justify-center content-center gap-1.5 md:gap-2 order-2 md:order-1 overflow-hidden p-2"; 
     combatPlayerDeck.innerHTML = '';
 
     // 3) 몬스터 영역 (우측)
-    // min-h-[200px] -> min-h-[180px] (모바일에서 몬스터 영역도 살짝 줄임)
     combatMonsterArea.className = "w-full md:w-1/2 flex flex-col items-center justify-center bg-black/40 rounded-xl p-4 order-1 md:order-2 border border-white/10 min-h-[180px]";
     
     // 플레이어 덱 UI 그리기
     combatDeck.forEach((card, index) => {
         const cardEl = document.createElement('div');
         
-        // ✨ 핵심 변경 2: 카드 너비 'w-[28%]'로 축소 (기존 30%)
-        // 너비가 줄면 높이도 비율대로 줄어들어 화면 세로 공간을 덜 차지합니다.
-        // p-1 -> p-0.5 (카드 내부 패딩도 줄여서 더 컴팩트하게 만듦)
+        // 카드 너비 28% 유지
         cardEl.className = 'relative w-[28%] bg-gray-800 p-0.5 rounded-lg border border-gray-600 shadow-md flex flex-col items-center transition-transform hover:scale-105 hover:z-10';
         cardEl.id = `combat-card-${index}`;
 
