--- a/yumecan.html
+++ b/yumecan.html
@@ -4452,10 +4452,6 @@ async function startCombat(indices, type) {
     }
 
     // 2) 플레이어 덱 영역 (좌측)
-    // ✨ 핵심 변경 1: 'overflow-hidden' 적용
-    // 스크롤 기능을 아예 꺼버립니다. 이제 터치해도 덱 영역이 움직이지 않습니다.
-    // ✨ 핵심 변경 2: 'pb-8' 제거
-    // 스크롤이 없으므로 하단 여백이 굳이 필요 없습니다. 중앙 정렬을 위해 제거했습니다.
     combatPlayerDeck.className = "w-full md:w-1/2 md:max-w-md flex flex-wrap justify-center content-center gap-1.5 md:gap-2 order-2 md:order-1 overflow-hidden p-2"; 
     combatPlayerDeck.innerHTML = '';
 
@@ -4466,7 +4462,9 @@ async function startCombat(indices, type) {
     combatDeck.forEach((card, index) => {
         const cardEl = document.createElement('div');
         
-        // 카드 너비 28% 유지
+        // ✨ 등급별 글로우 클래스 이름 생성 (예: rarity-glow-SSR)
+        const glowClass = `rarity-glow-${card.rarity}`;
+
         cardEl.className = 'relative w-[28%] bg-gray-800 p-0.5 rounded-lg border border-gray-600 shadow-md flex flex-col items-center transition-transform hover:scale-105 hover:z-10';
         cardEl.id = `combat-card-${index}`;
 
@@ -4474,7 +4472,7 @@ async function startCombat(indices, type) {
 
         cardEl.innerHTML = `
             <div class="relative w-full aspect-[2/3] overflow-hidden rounded mb-0.5">
-                <img src="${card.cardImageUrl}" class="w-full h-full object-cover opacity-90">
+                <img src="${card.cardImageUrl}" class="w-full h-full object-cover opacity-90 ${glowClass}">
                 <div id="effect-icons-${index}" class="absolute top-0.5 right-0.5 flex flex-col gap-0.5 items-end transform scale-75 origin-top-right"></div> 
             </div>
             
