--- a/yumecan.html
+++ b/yumecan.html
@@ -3108,7 +3108,7 @@ function addCardToInventory(cardName) {
                 checkAchievements(); // 이 줄 추가
             }
 			
-			funfunction getEnhancedStats(cardInstance) {
+			function getEnhancedStats(cardInstance) {
     const baseCard = findCharacter(cardInstance.name);
     if (!baseCard) return null;
 
