--- a/yumecan.html
+++ b/yumecan.html
@@ -5211,7 +5211,7 @@ saveGame();
 }
 
             // ✅ [수정됨] createCard 함수 (등급별 글로우 적용)
-ffunction createCard(character, options = {}) {
+function createCard(character, options = {}) {
     const { animationIndex, mode = 'default', isCardInDeck, isDeckFull, isCollected } = options;
     const cardInstance = options.instance; // 인스턴스 정보
 
