--- a/yumecan.html
+++ b/yumecan.html
@@ -9208,7 +9208,7 @@ function renderBreedingSlots() {
 }
 
 // 인벤토리 렌더링 (교배용)
-ffunction renderBreedingInventory() {
+function renderBreedingInventory() {
     const container = document.getElementById('breeding-inventory-container');
     container.innerHTML = '';
 
