--- a/yumecan.html
+++ b/yumecan.html
@@ -5578,7 +5578,7 @@ function getSkillDescription(skill) {
 
 			// ✅ showCardDetails 함수 바로 다음에 이 새로운 함수를 추가하세요.
 
-fufunction publishCard(cardId, targetCharacterData) {
+function publishCard(cardId, targetCharacterData) {
     const myCard = playerInventory.find(c => c.id === cardId);
     if (!myCard) return;
 
