--- a/yumecan.html
+++ b/yumecan.html
@@ -1220,21 +1220,28 @@ body.pointer-events-none {
             </div>
 
             <div class="w-full">
-    <h2 id="detail-card-name" class="text-3xl font-bold text-center"></h2>
-    
-    <div class="flex items-center justify-center gap-4 my-4">
-        <p id="detail-card-rarity" class="font-bold text-2xl"></p>
-        <p id="detail-card-faction" class="font-bold text-lg px-3 py-1 rounded-full"></p>
-    </div>
+                <h2 id="detail-card-name" class="text-3xl font-bold text-center"></h2>
+                <div class="flex items-center justify-center gap-4 my-4">
+                    <p id="detail-card-rarity" class="font-bold text-2xl"></p>
+                    <p id="detail-card-faction" class="font-bold text-lg px-3 py-1 rounded-full"></p>
+                </div>
 
-    <div id="detail-parents-wrapper" class="hidden text-center mb-4 bg-white/5 p-2 rounded-lg mx-2">
-        <p class="text-xs text-gray-400 mb-2">🧬 영감의 원천 (모티브)</p>
-        <div id="detail-parents-container" class="flex justify-center items-center gap-6">
-            </div>
-    </div>
-    <div id="enhancement-container" class="bg-black/20 p-4 rounded-lg">
-        <h3 class="font-bold text-lg mb-2 text-yellow-300">등장인물 퇴고</h3>
+                <div id="enhancement-container" class="bg-black/20 p-4 rounded-lg">
+				<h2 id="detail-card-name" class="text-3xl font-bold text-center"></h2>
+<div class="flex items-center justify-center gap-4 my-4">
+    <p id="detail-card-rarity" class="font-bold text-2xl"></p>
+    <p id="detail-card-faction" class="font-bold text-lg px-3 py-1 rounded-full"></p>
+</div>
+
+<div id="detail-parents-wrapper" class="hidden text-center mb-4 bg-white/5 p-2 rounded-lg mx-2">
+    <p class="text-xs text-gray-400 mb-2">🧬 영감의 원천 (모티브)</p>
+    <div id="detail-parents-container" class="flex justify-center items-center gap-6">
         </div>
+</div>
+<div id="enhancement-container" class="bg-black/20 p-4 rounded-lg">
+                    <h3 class="font-bold text-lg mb-2 text-yellow-300">등장인물 퇴고</h3>
+                    <div class="flex items-center justify-between">
+                        <div>
                             <p>현재 퇴고: <span id="detail-card-level" class="font-bold text-xl"></span></p>
                             <p id="enhancement-preview" class="text-sm text-green-400"></p>
                         </div>
