--- a/yumecan.html
+++ b/yumecan.html
@@ -451,7 +451,7 @@ body.pointer-events-none {
         hover:scale-105 hover:bg-gray-600 transition-all shadow-lg 
         flex flex-col md:flex-row items-center justify-center 
         border border-white/20 
-        border-b-2 md:border-b-0 md:border-l-4 border-yellow-400 
+        border-b-2 md:border-b-0 md:border-l-4 border-gray-400 
         mb-1 md:mb-1 gap-0.5 md:gap-2"> 
     <span class="transform skew-x-12 text-lg md:text-3xl mb-0.5 md:mb-0">💡</span>
     <span class="transform skew-x-12 text-sm md:text-2xl leading-none">영감</span>
@@ -10136,6 +10136,7 @@ function updateRaidDailyCountUI() {
     </script>
 </body>
 </html>
+
 
 
 
