--- a/yumecan.html
+++ b/yumecan.html
@@ -10403,7 +10403,7 @@ function finishIntroTutorial() {
     
     // 알림 메시지 띄우기
     setTimeout(() => {
-        alert("📖 프롤로그 완료!\n신규 탐정님을 위해 [보석 100개]가 지급되었습니다.\n\n지금 바로 '10회 뽑기'를 진행하여 동료를 모아보세요!");
+        alert("📖 프롤로그 완료!\n신규 유저님을 위해 [보석 100개]가 지급되었습니다.\n\n지금 바로 '10회 뽑기'를 진행하여 등장인물을 모아보세요!");
         
         // 10회 뽑기 버튼 강조 효과
         const tenPullBtn = document.getElementById('pull-ten');
