--- a/yumecan.html
+++ b/yumecan.html
@@ -6091,7 +6091,7 @@ function startInteractiveStory(storyOrIndex, type) {
     // 대화 내용 및 화자 이름 업데이트
     speakerName.textContent = scene.character || ' ';
 	let textToShow = scene.dialogue.replace(/{nickname}/g, currentPlayerNickname);
-    dialogueText.textContent = scene.dialogue;
+    dialogueText.textContent = textToShow;
 
     // ✨ 선택지 처리 로직 ✨
     if (scene.choices && scene.choices.length > 0) {
