--- a/yumecan.html
+++ b/yumecan.html
@@ -5201,6 +5201,12 @@ eventStories.forEach((story, index) => {
     `;
     eventStoryContainer.appendChild(storyEl);
 });
+
+    // 현재 이벤트 ID에 맞는 스토리가 하나도 없을 때
+    if (!hasStoryToShow) {
+        eventStoryContainer.innerHTML = `<p class="text-center text-gray-400 mt-10">현재 공개된 스토리가 없습니다.</p>`;
+    }
+}
 			
            // ✅ [최종 수정] endCombat (레이드 종료 시 모달 잔상 해결)
 function endCombat(isVictory, combatInfo, totalDamageDealt = 0) { 
